opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/jane-street-build-server"
bug-reports: "https://github.com/janestreet/jane-street-build-server/issues"
dev-repo: "git+https://github.com/janestreet/jane-street-build-server.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async"
  "async_rpc_kernel"
  "core"
  "core_kernel"
  "jbuilder"                {build & >= "1.0+beta8"}
  "ppx_driver"
  "ppx_jane"
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Jane Street build server

This package is used internally to get a package that we can build on
OSX, to bootstrap the system.
"
