opam-version: "2.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/jane-street-build-server"
bug-reports: "https://github.com/janestreet/jane-street-build-server/issues"
dev-repo: "git+https://github.com/janestreet/jane-street-build-server.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/jane-street-build-server/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "async"
  "async_rpc_kernel"
  "core"
  "core_kernel"
  "ppx_jane"
  "dune"             {>= "1.5.1"}
]
synopsis: "Jane Street build server"
description: "
This package is used internally to get a package that we can build on
OSX, to bootstrap the system.
"
